// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="dd button text-button "
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Normal 1`] = `
<button
  className="dd button text-button "
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="dd button text-button bg-primary"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary Disabled 1`] = `
<button
  className="dd button text-button bg-primary"
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/EntityEditor Deleted Foo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor Full Foo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <input
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor New Foo 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/HelloWorld Normal 1`] = `
<div>
  Hello world
</div>
`;
